# project-tree

./: .gitignore  .projtreeignore  pyproject.toml
projtree/: __init__.py  cli.py
